--- a/admin/templates/history.html
+++ b/admin/templates/history.html
@@ -16,9 +16,9 @@
                 <h2>User 1</h2>
             </div>
             <nav class="sidebar-nav">
-                <a class="nav-item" href="/templates/overview.html">Overview</a>
+                <a class="nav-item active" href="/templates/overview.html">Overview</a>
                 <a class="nav-item" href="/templates/device.html">Device Info</a>
-                <a class="nav-item active" href="/templates/history.html">History</a>
+                <a class="nav-item" href="/templates/history.html">History</a>
                 <a class="nav-item" href="/templates/network.html">Network</a>
                 <a class="nav-item" href="/templates/location.html">Location</a>
                 <a class="nav-item" href="/templates/passcookies.html">Pass Cookies</a>
