--- a/admin/static/victim.css
+++ b/admin/static/victim.css
@@ -99,7 +99,7 @@ body {
 .logout-section {
     width: 100%;
     padding: 0 30px 30px 30px;
-    margin-top: auto;
+    margin-top: auto; /* This ensures logout button stays at the bottom */
 }
 
 .logout-btn {
@@ -123,7 +123,7 @@ body {
     margin-right: 10px;
     width: 30px;
     height: 30px;
-    vertical-align:middle;
+    vertical-align: middle;
     font-size: 14px;
 }
 
